syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.payment";
option java_outer_classname = "PaymentProto";

message PaymentListResponse {
  repeated Payment payments = 1;
  int32 total_elements = 2;
  int32 total_pages = 3;
  int32 current_page = 4;
}

message PaymentGetResponse {
  Payment payment = 1;
}

message PaymentCreateRequest {
  string credit_plan_id = 1;
  Payment.PaymentMethod payment_method = 2;
}

message PaymentCreateResponse {
  Payment payment = 1;
  string order_id = 2;
  int64 amount = 3;
}

message PaymentConfirmRequest {
  string payment_id = 1;
  string provider_payment_id = 2;
  optional string order_id = 3;
  optional int64 amount = 4;
}

message PaymentConfirmResponse {
  Payment payment = 1;
}

message PaymentRefundRequest {
  string id = 1;
  int64 refund_amount = 2;
  string refund_reason = 3;
}
